--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Evolution Of Air Jordan site for people who are interested in the history of the brand">
+    <meta name="keywords" content="evolution of air jordans, jordans, history of jordans">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Evolution Of Air Jordan</title>
 </head>
 <body>
     <h1>Hello World</h1>
