--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Evolution Of Air Jordan</h1>
+            <h1 id="logo">Evolution Of Air Jordan</h1>
         </a>
         <nav>
             <ul>
