--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <h1 id="logo">Evolution Of Air Jordan</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="index.html">History</a>
+                    <a href="#">Sign Up</a>
                 </li>
                 <li>
                     <a href="#">Sneakers</a>
                 </li>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="index.html" class="active">History</a>
                 </li>
             </ul>
         </nav>
