--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </ul>
         </nav>
     </header>
-    <section>
-        Main image
+    <section id="logo-outer">
+        <div id="logo-image"></div>
     </section>
     <section>
         History
