--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">Evolution Of Air Jordan</h1>
+            <h1 id="logo">Evolution Of <span>Air Jordan</span></h1>
         </a>
         <nav>
             <ul id="menu">
@@ -34,6 +34,9 @@
     </header>
     <section id="logo-outer">
         <div id="logo-image"></div>
+        <div id="cover-text">
+            <h2>Welcome to The History Of Air Jordan ...</h2>
+        </div>
     </section>
     <section>
         History
