Add history section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <h2>Welcome to The History Of Air Jordan ...</h2>
         </div>
     </section>
-    <section>
-        History
+    <section id="history">
+        <h1>Behind The Brand</h1>
+        <div id="center-1">Center1</div>
+        <div id="center-2">Center2</div>
     </section>
     <footer>
         Social links here
