Add more content to history section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </section>
     <section id="history">
-        <h1>Behind The Brand</h1>
+        <h2 id="brand">Behind The Brand</h2>
         <div id="center-1">
             <div class="center-1-heading">
             <h2>How it Started</h2>
@@ -62,6 +62,7 @@
     <footer>
         Social links here
     </footer>
+
 </body>
 
 </html>
