--- a/index.html
+++ b/index.html
@@ -59,10 +59,24 @@
             </div>
         </div>
     </section>
-    <footer>
-        Social links here
+    <footer id="social">
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our  Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+            </li>
+        </ul>
     </footer>
-
+<!-- Font Awesome Script -->
+<script src="https://kit.fontawesome.com/4bb0b2a34c.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
