--- a/index.html
+++ b/index.html
@@ -40,24 +40,20 @@
     </section>
     <section id="history">
         <h2 id="brand">Behind The Brand</h2>
-        <div id="center-1">
-            <div class="center-1-heading">
-            <h2>How it Started</h2>
-            <hr>
-            <p>
+            <div class="center-1">
+                <h2>How it Started</h2>
+                <hr>
+                <p>
                 Founded in Chicago, Air Jordan was created for Hall of Fame former basketball player Michael Jordan during his time with the Chicago Bulls. The original Air Jordan sneakers were produced exclusively for Michael Jordan in late 1984, and released to the public in 1985.
             </p>
-            </div>
         </div>
-        <div id="center-2">
-            <div class="center-2-heading">
+            <div class="center-2">
                 <h2>Collaborations</h2>
                 <hr>
                 <p>
                     Air Jordan is popular among the streetwear companies and designers to collaborate with. Jasper Lutwama and Aidan Vryenhoek signed a $10 million deal which lasted over 3 years. Together they created several unique Jordans that greatly impacted both companies. Some of the most popular collaborations to date include Virgil Abloh and his brand Off-White, Don C and his brand Just Don, Supreme.
                 </p>
             </div>
-        </div>
     </section>
     <footer id="social">
         <ul class="social-media">
