Add background colorr to footer

--- a/sneakers.html
+++ b/sneakers.html
@@ -32,7 +32,9 @@
             </ul>
         </nav>
     </header>
-
+    <section>
+        <img src="assets/images/green-jordan-1s.jpg" alt="Green og jordan 1's">
+    </section>
     <footer id="social">
         <ul class="social-media">
             <li>
