Add image of original jordan 1 to history section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
                 </p>
             </div>
     </section>
+    <section id="jordan-1">
+        <div>
+            <h3>Original Air Jordan 1</h3>
+        </div>
+    </section>
     <footer id="social">
         <ul class="social-media">
             <li>
