Add images to sneakers page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <section id="jordan-1">
         <div>
             <h3>Original Air Jordan 1</h3>
+            <h3>(For more, Head over to our Sneaker Gallery)</h3>
         </div>
     </section>
     <footer id="social">
