Add style to sneakers page images

--- a/sneakers.html
+++ b/sneakers.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="sneakers">
         <img src="assets/images/green-jordan-1s.jpg" alt="Green high jordan 1's">
         <img src="assets/images/red-jordan-1.jpg" alt="Red high jordan 1's">
         <img src="assets/images/low-red-jordan-1s.jpg" alt="Red low jordan 1's">
