--- a/signup.html
+++ b/signup.html
@@ -21,13 +21,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="signup.html">Sign Up</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
                 <li>
                     <a href="sneakers.html">Sneakers</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active">History</a>
+                    <a href="index.html">History</a>
                 </li>
             </ul>
         </nav>
