--- a/signup.html
+++ b/signup.html
@@ -70,6 +70,7 @@
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our  Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
             </li>
+            <p class="copyright"> &copy; Evolution Of Air Jordan 2022</p>
         </ul>
     </footer>
 <!-- Font Awesome Script -->
